# rank-relax

./: .gitignore  ALL_FIXED.md  BENCHMARKING.md  CANDLE_BURN_INTEGRATION.md  COMPLETION_SUMMARY.md  Cargo.toml  DOCUMENTATION_INDEX.md  EXAMPLES.md  FIXES_SUMMARY.md  GETTING_STARTED.md  MATHEMATICAL_DETAILS.md  NEXT_STEPS.md  PARAMETER_TUNING.md  PEDAGOGICAL_IMPROVEMENTS.md  README.md  RELATED_WORK.md  TEST_SUMMARY.md  TRAINING_INTEGRATION.md  USAGE_EXAMPLES.md  VERIFICATION.md
.cursor/rules/: README.md  relax-specific.mdc  shared-base.mdc
.github/workflows/: ci.yml  e2e-published.yml  publish.yml  security-audit.yml  test.yml
benches/: gumbel_benchmark.rs  performance.rs  ranking_benchmark.rs  relax.rs
benchmarks/: paper_reproduction.rs
docs/: GETTING_STARTED.md  GUMBEL_RERANKING.md  GUMBEL_TESTING.md  IMPLEMENTATION_PLAN.md  PROGRESS.md  PROOF.md  PROOF_COMPLETE.md  PUBLISHING.md  README.md  RELATED_WORK.md  STATUS.md  TRAINING_INTEGRATION.md  main.typ
examples/: burn_training.rs  candle_training.rs  complete_workflow.rs  gumbel_rag_training.rs  gumbel_reranking.rs  gumbel_vs_sigmoid_comparison.rs  julia_training.jl  paper_reproduction_demo.rs  proof_of_concept.rs
hack/viz/: SOFT_RANKING_VISUALIZATIONS.md  generate_gumbel_analysis.py  generate_soft_ranking_real_data.py  generate_soft_ranking_viz.py
rank-relax-python/: Cargo.toml  PYTORCH_JAX_INTEGRATION.md  README.md  pyproject.toml  pytest.ini  rank_relax.pyi
rank-relax-python/examples/: complete_training_example.py  jax_primitive.py  jax_training.py  pytorch_autograd.py  pytorch_training.py
rank-relax-python/rank_relax/: __init__.py
rank-relax-python/src/: autograd_pytorch.rs  lib.rs
rank-relax-python/tests/: run_tests.py  test_e2e_training_jax.py  test_e2e_training_pytorch.py  test_gradient_correctness.py  test_integration.py  test_numerical_stability.py  test_publishing.py  test_pytorch_integration.py  test_relax.py
src/: batch.rs  gradients.rs  lib.rs  methods.rs  methods_advanced.rs  optimized.rs  proptests.rs  rank.rs  sort.rs  spearman.rs
tests/: gumbel_comparison.rs  gumbel_integration.rs  gumbel_property_tests.rs  integration_comprehensive.rs  rank_eval_integration.rs  test_e2e_training_candle.rs
viz/: generate_soft_ranking_viz.py
