[package]
name = "rank-relax-python"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true

[lib]
name = "rank_relax"
crate-type = ["cdylib"]

[dependencies]
rank-relax = { path = ".." }
pyo3 = { workspace = true }
numpy = { version = "0.22", optional = true }
pyo3-tch = { version = "0.3", optional = true }
tch = { version = "0.15", optional = true }

[features]
default = []
pytorch = ["pyo3-tch", "tch"]
numpy = ["dep:numpy"]

